# usa-spending-grants-mcp-server-DEMO

./: Procfile  README.md  manifest.yaml  pyproject.toml  requirements.txt  start.sh
src/usa_spending_mcp_server/: server.py
src/usa_spending_mcp_server/models/: award_spending_models.py  common_models.py  grants_search_models.py
src/usa_spending_mcp_server/tools/: award_spending.py  grants_search.py
